Fix team table tooltip detection and truncation behavior (#79)

--- a/app/assets/stylesheets/_table.scss
+++ b/app/assets/stylesheets/_table.scss
@@ -118,6 +118,13 @@ table {
       z-index: 20;
     }
   }
+
+  .truncate-text {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
 
 table, th, td {
